deployment/templates/azuredeploy.ase.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vNet": {
            "type": "object",
            "metadata": {
                "description": "JSON object describing virtual network & subnet to integrate with"
            }
        },
        "aseNSGName": {
            "type": "string",
            "metadata": {
                "description": "The name of the NSG used on the ASE subnet."
            }
        },
        "appServiceEnvironmentName": {
            "type": "string",
            "metadata": {
                "description": "The name of the App Service Environment where the app service plan will be created."
            }
        },

        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Set this to the same location as the app service environment"
            }
        }
    },
    "variables": {
        "aseId": "[resourceId('Microsoft.Web/hostingEnvironments', parameters('appServiceEnvironmentName'))]",
        "aseLoadBalancingMode": 3 // 0 = public VIP only, 1 = only ports 80/443 are mapped to ILB VIP, 2 = only FTP ports are mapped to ILB VIP, 3 = both ports 80/443 and FTP ports are mapped to an ILB VIP.
    },
    "resources": [
        {
            "comments": "This deployment contains the network related nested ARM template",
            "name": "nestedTemplate-ase-network",
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2020-06-01",
            "resourceGroup": "[parameters('vNet').resourceGroup]",
            "dependsOn": [
            ],
            "properties": {
                "expressionEvaluationOptions": {
                    "scope": "inner"
                },
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "parameters": {
                        "aseNSGName": {
                            "type": "string",
                            "metadata": {
                                "description": "The name of the NSG used on the ASE subnet."
                            }
                        },
                        "aseVNetName": {
                            "type": "string",
                            "metadata": {
                                "description": "The ASE VNET name."
                            }
                        },
                        "aseSubnetName": {
                            "type": "string",
                            "metadata": {
                                "description": "The ASE subnet name."
                            }
                        },
                        "aseSubnetAddressPrefix": {
                            "type": "string",
                            "metadata": {
                                "description": "The ASE subnet address prefix."
                            }
                        },
                        "aseRouteName": {
                            "type": "string",
                            "metadata": {
                                "description": "The name of the Route Table used on the ASE subnet."
                            }
                        },
                        "location": {
                            "type": "string",
                            "defaultValue": "[resourceGroup().location]",
                            "metadata": {
                                "description": "location to deploy app service web app"
                            }
                        }
                    },
                    "variables": {
                    },
                    "resources": [
                        {
                            "type": "Microsoft.Network/networkSecurityGroups",
                            "apiVersion": "2019-11-01",
                            "name": "[parameters('aseNSGName')]",
                            "location": "[parameters('location')]",
                            "tags": {
                                "displayName": "[parameters('aseNSGName')]"
                            },
                            "properties": {
                                "securityRules": [
                                    {
                                        "name": "ASE-internal-inbound",
                                        "properties": {
                                            "description": "ASE-internal-inbound",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "*",
                                            "sourceAddressPrefix": "[parameters('aseSubnetAddressPrefix')]",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 200,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Inbound-management",
                                        "properties": {
                                            "description": "Used to manage ASE from public VIP",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "454-455",
                                            "sourceAddressPrefix": "AppServiceManagement",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 210,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Inbound-load-balancer-keep-alive",
                                        "properties": {
                                            "description": "Allow communication to ASE from Load Balancer",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "16001",
                                            "sourceAddressPrefix": "AzureLoadBalancer",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 211,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Inbound-HTTP_HTTPS",
                                        "properties": {
                                            "description": "Allow HTTP/HTTPS",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRanges": [
                                                "80",
                                                "443"
                                            ],
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 212,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Inbound-FTP_FTPS",
                                        "properties": {
                                            "description": "Allow FTP and FTPS",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRanges": [
                                                "21",
                                                "990",
                                                "10001-10020"
                                            ],
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 213,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Inbound-Remote-Debugging",
                                        "properties": {
                                            "description": "Visual Studio remote debugging",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "4016-4022",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 214,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Inbound-Web-Deploy-Service",
                                        "properties": {
                                            "description": "Web deploy service",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "8172",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 215,
                                            "direction": "Inbound"
                                        }
                                    },

                                    {
                                        "name": "ASE-internal-outbound",
                                        "properties": {
                                            "description": "ASE-internal-outbound",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "*",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "[parameters('aseSubnetAddressPrefix')]",
                                            "access": "Allow",
                                            "priority": 200,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Outbound-HTTP_HTTPS",
                                        "properties": {
                                            "description": "Allow HTTP and HTTPS traffic (needed to access storage)",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRanges": [
                                                "80",
                                                "443"
                                            ],
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 210,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Outbound-DB",
                                        "properties": {
                                            "description": "Allow access to database",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "1433",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "Sql",
                                            "access": "Allow",
                                            "priority": 211,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Outbound-DNS",
                                        "properties": {
                                            "description": "Allow access to DNS",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "53",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 212,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "ASE-Outbound-NTP",
                                        "properties": {
                                            "description": "Allow access to clock synchronization",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "destinationPortRange": "123",
                                            "sourceAddressPrefix": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 213,
                                            "direction": "Outbound"
                                        }
                                    }
                                ]
                            }
                        },
                        {
                            "type": "Microsoft.Network/routeTables",
                            "apiVersion": "2019-11-01",
                            "name": "[parameters('aseRouteName')]",
                            "location": "[parameters('location')]",
                            "tags": {
                                "displayName": "UDR - Subnet"
                            },
                            "properties": {
                                "routes": [
                                    {
                                        "name": "[concat(parameters('aseRouteName'), '-route')]",
                                        "properties": {
                                            "addressPrefix": "0.0.0.0/0",
                                            "nextHopType": "Internet"
                                        }
                                    }
                                ]
                            }
                        },
                        {
                            "type": "Microsoft.Network/virtualNetworks/subnets",
                            "apiVersion": "2019-11-01",
                            "name": "[concat(parameters('aseVNetName'), '/', parameters('aseSubnetName'))]",
                            "location": "[parameters('location')]",
                            "dependsOn": [
                                "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('aseNSGName'))]",
                                "[resourceId('Microsoft.Network/routeTables', parameters('aseRouteName'))]"
                            ],
                            "properties": {
                                "addressPrefix": "[parameters('aseSubnetAddressPrefix')]",
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('aseNSGName'))]"
                                },
                                "routeTable": {
                                    "id": "[resourceId('Microsoft.Network/routeTables', parameters('aseRouteName'))]"
                                },
                                "serviceEndpoints": [
                                    {
                                        "service": "Microsoft.AzureCosmosDB",
                                        "locations": [
                                            "[resourceGroup().location]"
                                        ]
                                    },
                                    {
                                        "service": "Microsoft.KeyVault",
                                        "locations": [
                                            "[resourceGroup().location]"
                                        ]
                                    },
                                    {
                                        "service": "Microsoft.ServiceBus",
                                        "locations": [
                                            "[resourceGroup().location]"
                                        ]
                                    },
                                    {
                                        "service": "Microsoft.Sql",
                                        "locations": [
                                            "[resourceGroup().location]"
                                        ]
                                    },
                                    {
                                        "service": "Microsoft.Storage",
                                        "locations": [
                                            "[resourceGroup().location]"
                                        ]
                                    },
                                    {
                                        "service": "Microsoft.EventHub",
                                        "locations": [
                                            "[resourceGroup().location]"
                                        ]
                                    }
                                ]
                            }
                        }
                    ],
                    "outputs": {
                        "vnetSubnetId": {
                            "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets/', parameters('aseVNetName'), parameters('aseSubnetName'))]",
                            "type": "string"
                        }
                    }
                },
                "parameters": {
                    "aseNSGName": {
                        "value": "[parameters('aseNSGName')]"
                    },
                    "aseVNetName": {
                        "value": "[parameters('vNet').name]"
                    },
                    "aseSubnetName": {
                        "value": "[parameters('vNet').asesubnet.name]"
                    },
                    "aseSubnetAddressPrefix": {
                        "value": "[parameters('vNet').asesubnet.addressPrefix]"
                    },
                    "aseRouteName": {
                        "value": "[parameters('vNet').asesubnet.routeName]"
                    }
                }
            }
        },
        {
            "apiVersion": "2020-06-01",
            "type": "Microsoft.Web/hostingEnvironments",
            "name": "[parameters('appServiceEnvironmentName')]",
            "kind": "ASEV2",
            "location": "[parameters('location')]",
            "dependson": [
                "nestedTemplate-ase-network"
            ],
            "properties": {
                "name": "[parameters('appServiceEnvironmentName')]",
                "location": "[parameters('location')]",
                "ipSslAddressCount": 0, // Number of IP SSL addresses reserved for the App Service Environment.
                "internalLoadBalancingMode": "[variables('aseLoadBalancingMode')]",
                "virtualNetwork": {
                    "id": "[reference(resourceId(parameters('vNet').resourceGroup, 'Microsoft.Resources/deployments', 'nestedTemplate-ase-network')).outputs.vnetSubnetId.value]"
                }
            }
        }
    ],
    "outputs": {
        "dnsSuffix": {
            "value": "[reference(variables('aseId')).dnsSuffix]",
            "type": "string"
        },
        "aseId": {
            "value": "[variables('aseId')]",
            "type": "string"
        },
        "aseSubnetName": {
            "value": "[parameters('vNet').asesubnet.name]",
            "type": "string"
        },
        "aseName": {
            "value": "[parameters('appServiceEnvironmentName')]",
            "type": "string"
        }
    }
}
